--- a/static/styles.css
+++ b/static/styles.css
@@ -20,7 +20,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 800px;
   position: relative;
   overflow: hidden;
 }
@@ -29,8 +28,21 @@
   .header-home {
     height: auto;
   }
+  .header-container {
+    top: -100px;
+    position: relative;
+  }
 }
 @media screen and (max-width: 759px) {
+  .header-home {
+    height: 400px;
+  }
+  .header-container {
+    position: relative;
+    top: -100px;
+  }
+}
+@media screen and (max-width: 560px) {
   .header-home {
     height: 400px;
   }
@@ -44,6 +56,8 @@
   flex-basis: 30%;
   max-width: 30%;
   height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar-container {
@@ -62,13 +76,16 @@
   background: #FFFFFF;
   z-index: 2;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 #myVideo {
   width: 100%;
   height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-height: 800px;
 }
 
 .logo {
@@ -76,14 +93,15 @@
   width: 392px;
   height: auto;
   left: 8.3%;
-  top: 42px;
+  top: 70px;
   max-width: 20%;
   max-height: auto;
   min-width: 200px;
 }
 
 .content-space {
-  height: 154px;
+  height: 100px;
+  align-items: center;
 }
 
 @media screen and (max-width: 974px) {
@@ -92,6 +110,15 @@
     flex-wrap: wrap;
     height: -moz-max-content;
     height: max-content;
+  }
+  .logo {
+    position: relative;
+    height: auto;
+    left: 8.3%;
+    top: 40%;
+    max-width: 20%;
+    max-height: auto;
+    min-width: 200px;
   }
 }
 @media screen and (max-width: 759px) {
@@ -122,7 +149,7 @@
 }
 
 .inline h2 {
-  font-size: 25px;
+  font-size: 20px;
   text-align: center;
 }
 
@@ -201,7 +228,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat";
 }
 
 footer {
@@ -242,8 +269,8 @@ footer {
     grid-template-columns: repeat(2, 465px);
     grid-template-rows: repeat(3, 465px);
     grid-gap: 78px;
-    margin-left: 8.3%;
-    margin-right: 8.3%;
+    margin-left: 3%;
+    margin-right: 3%;
   }
   .photo-grid-service {
     flex-wrap: wrap;
@@ -255,6 +282,9 @@ footer {
   .photo-grid {
     display: flex;
     flex-direction: column;
+    margin-left: 3%;
+    margin-right: 3%;
+    max-width: 94%;
   }
   .photo-grid-service {
     flex-direction: column;
@@ -266,8 +296,8 @@ footer {
 .photo-grid-service {
   display: flex;
   grid-gap: 78px;
-  margin-left: 8.3%;
-  margin-right: 8.3%;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 .photo-grid img {
@@ -277,6 +307,7 @@ footer {
      object-fit: cover;
   overflow: hidden;
   min-height: 465px;
+  max-width: 100%;
 }
 
 .photo-grid-container {
@@ -335,6 +366,10 @@ footer {
     flex-wrap: wrap;
     height: -moz-fit-content;
     height: fit-content;
+  }
+  .photo-grid-container {
+    margin-left: 3%;
+    margin-right: 3%;
   }
 }
 .footer-grid div:not(:last-child) {
@@ -396,7 +431,7 @@ footer {
 .hamburger .line {
   width: 50px;
   height: 5px;
-  background-color: #000000;
+  background-color: #ac8b55;
   display: block;
   margin: 8px auto;
   transition: all 0.3s ease-in-out;
@@ -477,11 +512,11 @@ footer {
 /*Photo overlay and text on Projects page*/
 .image {
   position: relative;
+  display: inline-block;
 }
 
 .image img {
   width: 100%;
-  vertical-align: top;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -502,11 +537,15 @@ footer {
   opacity: 1;
 }
 
+.image:focus:after {
+  opacity: 1;
+}
+
 .image p {
   position: absolute;
-  top: 25%;
+  top: 10px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
   z-index: 1;
   color: #fff;
   opacity: 0;
@@ -589,7 +628,6 @@ Services page
 
 */
 .service-heading {
-  margin-top: 154px;
   position: relative;
   margin-bottom: 20px;
 }
@@ -601,6 +639,13 @@ Services page
 figure {
   margin: 0;
   padding: 0;
+  width: 465px;
+  height: 465px;
+}
+
+.service-image {
+  width: 465px;
+  height: 465px;
 }
 
 figcaption {
@@ -613,11 +658,51 @@ figcaption {
 /* Contact Page */
 .contact-box {
   height: 1078px;
-  width: 84.4%;
+  width: 0%;
   background-color: black;
-  margin: auto;
   display: flex;
   flex-direction: column;
+  margin: none;
+  animation: expand 2.3s ease forwards;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+@keyframes expand {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+.contact-header {
+  margin-left: 8.3%;
+  margin-top: 8.3%;
+  color: white;
+}
+
+.contact-image {
+  height: 1078px;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: row;
+  margin-left: 8.3%;
+  margin-right: 8.3%;
+  align-items: start;
+  position: relative;
 }
 
 .contact-text {
@@ -627,6 +712,42 @@ figcaption {
   color: white;
 }
 
+@media screen and (max-width: 1121px) {
+  .contact-image {
+    width: 0;
+    opacity: 0;
+  }
+  .contact-right {
+    width: 0px;
+    height: 0px;
+  }
+  .contact-left {
+    width: 100%;
+  }
+  .contact-container {
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+  .contact-box {
+    width: 100%;
+    min-width: 361px;
+    animation: none;
+  }
+}
+.contact-right {
+  width: 33%;
+}
+
+.contact-left {
+  max-width: 66%;
+  top: 0;
+  position: relative;
+  padding: none;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -634,6 +755,7 @@ figcaption {
 .flex-container {
   margin-left: 8.3%;
   margin-top: 8.3%;
+  z-index: 2;
 }
 
 .flex-row {
@@ -651,9 +773,12 @@ figcaption {
     flex-basis: 100%;
   }
   .service-image {
-    max-width: 83vw;
-    margin-left: 8.3%;
-    margin-right: 8.3%;
+    max-width: 94vw;
+  }
+  figure {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
   }
 }
 .col {
@@ -677,8 +802,8 @@ figcaption {
 .safety-grid {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  align-items: start;
+  justify-content: space-between;
   margin-left: 8.3%;
   margin-right: 8.3%;
 }
@@ -687,6 +812,7 @@ figcaption {
   max-width: 900px;
   width: auto;
   height: auto;
+  margin-right: 60px;
 }
 
 @media screen and (max-width: 1560px) {
@@ -694,7 +820,8 @@ figcaption {
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: center;
+    justify-content: left;
+    margin-left: none; /* Center the container horizontally */
   }
   .safety-img {
     max-width: 83vw;
@@ -722,7 +849,9 @@ figcaption {
     justify-content: space-between;
   }
   .safety-intro {
-    font-size: 16px;
+    font-size: 20px;
+    margin-left: 0%;
+    padding-left: none;
   }
   .safety-small {
     font-size: smaller;
@@ -741,7 +870,6 @@ figcaption {
 }
 
 .safety-intro {
-  margin-left: 8.3%;
   font-size: 20px;
 }
 
@@ -754,6 +882,8 @@ figcaption {
   display: flex;
   justify-content: center;
   max-width: 83vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .strip {
@@ -766,6 +896,7 @@ figcaption {
   word-wrap: break-word;
   max-width: 80%; /* Set the desired width */
   margin: 10 auto; /* Center the container horizontally */
+  font-size: 20px;
 }
 
 .special-text-3 {
@@ -852,7 +983,7 @@ figcaption {
 }
 
 .experts {
-  font-size: 60px;
+  font-size: 20px;
   font-weight: bold;
   margin-left: 8.3%;
 }
@@ -914,8 +1045,7 @@ figcaption {
 }
 
 .aboutIntro {
-  font-size: 16px;
-  width: 700px;
+  font-size: 20px;
   margin-right: 8.3%;
   margin-bottom: 0;
   margin-top: 0;
@@ -924,11 +1054,13 @@ figcaption {
 
 @media screen and (max-width: 756px) {
   .aboutIntro {
-    font-size: 16px;
+    font-size: 20px;
     width: 100%;
     margin-bottom: 0;
     margin-top: 0;
     height: auto;
+    margin-left: none;
+    margin-right: none;
   }
   .about-grid {
     flex-direction: column;
@@ -940,13 +1072,31 @@ figcaption {
     grid-gap: 78px;
   }
   .experts {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
   }
   .horiz-logo {
     max-width: 83vw;
     height: auto;
     padding: 10px;
+  }
+  .logo-grid {
+    align-items: center;
+    margin: auto;
+    justify-content: space-around;
+  }
+  .associations {
+    align-items: center;
+  }
+}
+@media screen and (max-width: 1296px) {
+  .about-grid {
+    flex-direction: column;
+  }
+  .photo-grid-about {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
 }
 .itemAbout {
@@ -966,7 +1116,7 @@ figcaption {
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 1296px) {
   .sub {
     opacity: 0;
     height: 0px;
@@ -983,18 +1133,18 @@ figcaption {
 }
 .item {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   margin-bottom: 50px;
   width: 100%;
 }
 
-.item:nth-child(even) {
+/*.item:nth-child(even) {
   flex-direction: row-reverse;
-}
-
+}*/
 .item img {
-  width: 924px;
-  height: 616px;
+  width: 80%;
+  height: auto;
+  max-height: 512px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -1003,8 +1153,8 @@ figcaption {
   flex: 1;
   max-width: 684px;
   width: auto;
-  margin-left: 8.3%;
-  margin-right: auto;
+  margin-left: 3%;
+  margin-right: 3%;
   text-align: justify;
   flex-basis: calc(100% - 924px - 154px);
 }
@@ -1016,8 +1166,8 @@ figcaption {
 }
 
 .item:first-child .text {
-  margin-left: auto;
-  margin-right: 154px;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 @media screen and (max-width: 1450px) {
@@ -1034,7 +1184,7 @@ figcaption {
     width: auto;
     margin-left: 10px;
     margin-right: 10px;
-    text-align: none;
+    text-align: start;
     flex-basis: none;
   }
   .item:first-child {
@@ -1051,13 +1201,14 @@ figcaption {
   }
 }
 .home-intro {
-  font-size: 40px;
-  font-weight: 400;
+  font-size: 20px;
+  text-align: justify;
+  margin-left: 3%;
 }
 
 .home-text {
-  font-size: 36px;
-  font-weight: 400;
+  font-size: 20px;
+  text-align: justify;
 }
 
 @media screen and (max-width: 754px) {
@@ -1083,11 +1234,15 @@ figcaption {
   min-height: 200px;
   margin-top: 10px;
   clear: both;
+  max-height: 657px;
 }
 
 .esgBanner img {
   width: 100%;
   height: auto;
+  max-height: 657px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .esgBanner h2 {
@@ -1104,7 +1259,7 @@ figcaption {
   left: 0;
   width: 100%;
   height: 100%;
-  /*background-color: rgba(0,0,0,0.2); */ /* Change the 0.5 to adjust the transparency */
+  background-color: rgba(0, 0, 0, 0.2); /* Change the 0.5 to adjust the transparency */
   display: flex;
   color: #fff;
   font-size: 2rem;
@@ -1132,4 +1287,9 @@ figcaption {
   .esgOverlay h2 {
     font-size: 1rem;
   }
+}
+.standard-banner {
+  max-height: 657px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=styles.css.map */
