--- a/static/styles.scss
+++ b/static/styles.scss
@@ -314,9 +314,12 @@ footer {
     }
 
     .photo-grid-service {
-      flex-wrap: wrap;
       margin-left: 8.3%;
       margin-right: 8.3%;
+      max-width: 94vw;
+      grid-template-columns: repeat(2, 465px);
+      grid-template-rows: repeat(2, 465px);
+
     }
   
 }
@@ -324,7 +327,7 @@ footer {
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1011px) {
   .photo-grid {
     display: flex;
     flex-direction: column;
@@ -397,6 +400,11 @@ footer {
 .photo-grid img:hover + p {
   opacity: 1;
 }
+
+.photo-grid img:focus + p {
+  opacity: 1;
+}
+
 
 .footer-grid {
   display: grid;
@@ -640,6 +648,10 @@ footer {
   opacity: 1;
 }
 
+.image:focus p {
+  opacity: 1;
+}
+
 .image hr {
   width: 75%;
   color: white;
@@ -823,6 +835,7 @@ figcaption {
     align-items: center;
     margin-left: 3%;
     margin-right: 3%;
+    max-width: 94vw;
   }
   .contact-box {
     width: 100%;
@@ -873,7 +886,8 @@ figcaption {
     flex-basis: 100%;
   }
   .service-image {
-    max-width: 94vw;
+    max-width: 100%;
+    height: 465px;
     
     
   }
