--- a/static/styles.css
+++ b/static/styles.css
@@ -276,8 +276,9 @@ footer {
     margin-left: 8.3%;
     margin-right: 8.3%;
     max-width: 94vw;
-    grid-template-columns: repeat(2, 465px);
-    grid-template-rows: repeat(2, 465px);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 @media screen and (max-width: 1011px) {
@@ -745,6 +746,8 @@ figcaption {
   .contact-box {
     width: 100%;
     animation: none;
+    min-width: -moz-fit-content;
+    min-width: fit-content;
   }
 }
 .contact-right {
