--- a/static/styles.css
+++ b/static/styles.css
@@ -1080,11 +1080,6 @@ figcaption {
     flex-direction: column;
     align-items: center;
   }
-  .photo-grid-about {
-    display: flex;
-    flex-direction: column;
-    grid-gap: 78px;
-  }
   .experts {
     font-size: 20px;
     font-weight: bold;
@@ -1103,14 +1098,21 @@ figcaption {
     align-items: center;
   }
 }
-@media screen and (max-width: 1296px) {
+@media screen and (max-width: 1079px) {
+  .photo-grid-about {
+    display: flex;
+    flex-direction: column;
+    grid-gap: 78px;
+  }
+}
+@media screen and (max-width: 1590px) {
   .about-grid {
     flex-direction: column;
   }
   .photo-grid-about {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    grid-template-columns: repeat(2, 465px);
+    justify-content: space-between;
+    grid-gap: auto;
   }
 }
 .itemAbout {
