--- a/static/styles.scss
+++ b/static/styles.scss
@@ -45,6 +45,14 @@
 
   }
 
+  p {
+    font-size: 16px !important;
+  }
+
+  li { 
+    font-size: 16px !important;
+  }
+
 }
 
 @media screen and (max-width: 560px) {
@@ -316,7 +324,7 @@ footer {
     .photo-grid-service {
       margin-left: 8.3%;
       margin-right: 8.3%;
-      max-width: 94vw;
+      max-width: 94%;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -341,6 +349,11 @@ footer {
 
   .photo-grid-service {
     flex-direction: column;
+    max-width: 94% !important;
+    margin-right: 3%;
+    margin-left: 3%;
+    flex-wrap: nowrap;
+    grid-gap: 78px;
   }
   .content-space {
     height: 75px;
@@ -400,10 +413,12 @@ footer {
 
 .photo-grid img:hover + p {
   opacity: 1;
+  display: block;
 }
 
 .photo-grid img:focus + p {
   opacity: 1;
+  display: block;
 }
 
 
@@ -433,6 +448,7 @@ footer {
   .photo-grid-container {
     margin-left: 3%;
     margin-right: 3%;
+    max-width: 94% !important;
   }
 
   
@@ -629,10 +645,12 @@ footer {
 }
 .image:hover:after {
   opacity: 1;
+  display: block;
 }
 
 .image:focus:after {
   opacity: 1;
+  display: block;
 }
 
 .image p {
@@ -647,10 +665,12 @@ footer {
 }
 .image:hover p {
   opacity: 1;
+  display: block;
 }
 
 .image:focus p {
   opacity: 1;
+  display: block;
 }
 
 .image hr {
@@ -1003,6 +1023,7 @@ figcaption {
 
 .safety-intro {
   font-size: 20px;
+  text-align: justify;
 }
 
 .box-text p{
@@ -1203,6 +1224,7 @@ figcaption {
   margin-bottom: 0; 
   margin-top:0; 
   height: auto;
+  text-align: justify;
 }
 
 @media screen and (max-width: 756px) {
@@ -1487,6 +1509,18 @@ figcaption {
 .esgText {
   margin-left: 8.3%;
   margin-right: 8.3%;
+}
+
+.esgText ul li {
+  text-align: justify;
+  font-size: 20px;
+
+}
+
+.esgText p {
+  text-align: justify;
+  font-size: 20px;
+
 }
 
 @media (max-width: 768px) {
