--- a/static/styles.scss
+++ b/static/styles.scss
@@ -1004,6 +1004,11 @@ figcaption {
   .safety-small {
     font-size: smaller;
   }
+
+  .safetyText {
+    width: 100%;
+    max-width: none;
+  }
   
 
 }
@@ -1051,9 +1056,10 @@ figcaption {
 
 .safetyText {
     word-wrap: break-word;
-    max-width: 80%; /* Set the desired width */
     margin: 10 auto; /* Center the container horizontally */
     font-size: 20px;
+    text-align: justify;
+    margin-right: 60px;
 }
 
 
