--- a/static/styles.css
+++ b/static/styles.css
@@ -131,6 +131,44 @@
   .content-space {
     height: 20px;
   }
+  .navbar-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+  }
+  .header-banner {
+    flex-direction: column;
+    align-items: center !important;
+  }
+  .logo {
+    position: absolute;
+    width: 90%;
+    max-width: none;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 40px;
+  }
+  .menu ul {
+    margin-top: 300px !important;
+    text-align: center;
+  }
+  .logo-container {
+    width: 100%;
+    flex-basis: 90%;
+    max-width: 75vw;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 30px;
+  }
+  .menu-header {
+    margin-right: 0;
+  }
+  .menu li {
+    text-align: center !important;
+  }
 }
 .header-container {
   align-items: left;
@@ -893,6 +931,26 @@ figcaption {
     max-width: none;
   }
 }
+@media screen and (max-width: 913px) {
+  .safetyLoc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .LocImg {
+    max-width: 100%;
+    height: auto;
+  }
+}
+.safetyLoc {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  margin-left: 8.3%;
+  margin-right: 8.3%;
+  align-items: center;
+}
+
 .safety-strip {
   margin-right: 10px;
 }
@@ -908,16 +966,17 @@ figcaption {
 .safety-intro {
   font-size: 20px;
   text-align: justify;
+  max-width: 1120px;
 }
 
-.box-text p {
+.safety-assoc .box-text p {
   font-size: 36px;
 }
 
 .cor {
   align-items: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   max-width: 83vw;
   margin-left: auto;
   margin-right: auto;
@@ -1015,6 +1074,10 @@ figcaption {
   width: 50%;
 }
 
+.safety-logo {
+  margin-right: 20px;
+}
+
 /*About*/
 .main {
   margin: 8.3%;
@@ -1044,7 +1107,12 @@ figcaption {
 }
 
 .associations {
+  display: flex;
   margin-left: 8.3%;
+  margin-right: 8.3%;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .horiz-logo {
@@ -1055,11 +1123,12 @@ figcaption {
 
 .photo-grid-about {
   display: grid;
-  grid-template-columns: repeat(3, 465px);
-  grid-template-rows: repeat(2, 465px);
+  grid-template-columns: repeat(4, 300px);
+  grid-template-rows: repeat(2, 300px);
   grid-gap: 78px;
   margin-left: 8.3%;
   margin-right: 8.3%;
+  justify-content: space-between;
 }
 
 .logo-grid {
