--- a/static/styles.scss
+++ b/static/styles.scss
@@ -142,6 +142,7 @@
     max-width: 20%;
     max-height: auto;
     min-width: 200px;
+
   }
 
 }
@@ -151,6 +152,55 @@
     height: 20px;
 
   }
+
+  .navbar-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+  }
+
+  .header-banner {
+    flex-direction: column;
+    align-items: center !important;
+  }
+
+  .logo {
+    position: absolute;
+    width: 90%;
+    max-width: none;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 40px;    
+    
+    
+  }
+
+  .menu ul {
+    margin-top: 300px !important;
+    text-align: center;
+  }
+  .logo-container {
+    width: 100%;
+    flex-basis: 90%;
+    max-width: 75vw;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 30px;
+  
+  }
+
+  .menu-header {
+    margin-right: 0;
+  }
+
+  .menu li {
+    text-align: center !important;
+  }
+
+  
 }
 
 
@@ -1009,9 +1059,34 @@ figcaption {
     width: 100%;
     max-width: none;
   }
-  
+
+
 
 }
+
+@media screen and (max-width: 913px){
+
+  .safetyLoc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .LocImg {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.safetyLoc {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  margin-left: 8.3%;
+  margin-right: 8.3%;
+  align-items: center;
+
+}
+
 
 .safety-strip {
   margin-right: 10px;
@@ -1029,7 +1104,10 @@ figcaption {
 .safety-intro {
   font-size: 20px;
   text-align: justify;
+  max-width: 1120px;
 }
+
+.safety-assoc
 
 .box-text p{
   font-size: 36px;
@@ -1042,7 +1120,7 @@ figcaption {
 .cor {
   align-items: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   max-width: 83vw;
   margin-left: auto;
   margin-right: auto;
@@ -1151,6 +1229,10 @@ figcaption {
 }
 
 
+.safety-logo {
+  margin-right: 20px;
+}
+
 
 
 /*About*/
@@ -1184,7 +1266,12 @@ figcaption {
 
 
 .associations {
+  display:flex;
   margin-left: 8.3%;
+  margin-right: 8.3%;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .horiz-logo {
@@ -1195,11 +1282,12 @@ figcaption {
 
 .photo-grid-about {
   display: grid;
-  grid-template-columns: repeat(3, 465px);
-  grid-template-rows: repeat(2, 465px);
+  grid-template-columns: repeat(4, 300px);
+  grid-template-rows: repeat(2, 300px);
   grid-gap: 78px;
   margin-left: 8.3%;
   margin-right: 8.3%;
+  justify-content: space-between;
   
 
 }
