--- a/static/styles.css
+++ b/static/styles.css
@@ -35,7 +35,8 @@
 }
 @media screen and (max-width: 759px) {
   .header-home {
-    height: 400px;
+    height: -moz-fit-content;
+    height: fit-content;
   }
   .header-container {
     position: relative;
@@ -50,7 +51,8 @@
 }
 @media screen and (max-width: 560px) {
   .header-home {
-    height: 400px;
+    height: -moz-fit-content;
+    height: fit-content;
   }
   .header-container {
     position: relative;
@@ -127,6 +129,14 @@
     min-width: 200px;
   }
 }
+#myImage {
+  display: none;
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 @media screen and (max-width: 759px) {
   .content-space {
     height: 20px;
@@ -168,6 +178,17 @@
   }
   .menu li {
     text-align: center !important;
+  }
+  #myVideo {
+    display: none;
+  }
+  #myImage {
+    display: block;
+    max-height: 300px;
+    width: 100%;
+  }
+  .home-br {
+    display: none;
   }
 }
 .header-container {
@@ -1330,6 +1351,11 @@ figcaption {
   }
   .header-font h4 {
     height: 0px;
+    display: none;
+  }
+  .header-font {
+    position: absolute;
+    top: 100px;
   }
 }
 .text h2 {
