--- a/static/styles.css
+++ b/static/styles.css
@@ -138,6 +138,11 @@
 }
 
 @media screen and (max-width: 759px) {
+  #hamburger-1.is-active {
+    position: fixed;
+    z-index: 1000;
+    top: 100px;
+  }
   .content-space {
     height: 20px;
   }
@@ -162,7 +167,7 @@
     top: 40px;
   }
   .menu ul {
-    margin-top: 300px !important;
+    margin-top: 200px !important;
     text-align: center;
   }
   .logo-container {
@@ -412,17 +417,20 @@ footer {
   font-weight: bold;
   text-align: center;
   opacity: 0;
+  visibility: 0;
   transition: opacity 0.2s ease-in-out;
 }
 
 .photo-grid img:hover + p {
   opacity: 1;
   display: block;
+  visibility: 1;
 }
 
 .photo-grid img:focus + p {
   opacity: 1;
   display: block;
+  visibility: 1;
 }
 
 .footer-grid {
@@ -611,16 +619,19 @@ footer {
   background: rgba(0, 0, 0, 0.6);
   opacity: 0;
   transition: opacity 0.5s ease;
+  visibility: 0;
 }
 
 .image:hover:after {
   opacity: 1;
   display: block;
+  visibility: 1;
 }
 
 .image:focus:after {
   opacity: 1;
   display: block;
+  visibility: 1;
 }
 
 .image p {
