--- a/static/styles.scss
+++ b/static/styles.scss
@@ -218,6 +218,10 @@
     text-align: center !important;
   }
 
+  .menu {
+    right: unset !important;
+  }
+
   #myVideo {
     display: none;
   }
