--- a/static/styles.scss
+++ b/static/styles.scss
@@ -493,20 +493,20 @@ footer {
   font-weight: bold;
   text-align: center;
   opacity: 0;
-  visibility: 0;
+  visibility:hidden;
   transition: opacity 0.2s ease-in-out;
 }
 
 .photo-grid img:hover + p {
   opacity: 1;
   display: block;
-  visibility: 1;
+  visibility: visible;
 }
 
 .photo-grid img:focus + p {
   opacity: 1;
   display: block;
-  visibility: 1;
+  visibility: visible;
 }
 
 
@@ -730,7 +730,7 @@ footer {
   background: rgba(0,0,0,0.6);
   opacity: 0;
   transition: opacity 0.5s ease;
-  visibility: 0;
+  visibility: hidden;
 }
 
 .image:after.active {
@@ -739,14 +739,14 @@ footer {
 .image:hover:after {
   opacity: 1;
   display: block;
-  visibility: 1;
+  visibility: visible;
 }
 
 
 .image:focus:after {
   opacity: 1;
   display: block;
-  visibility: 1;
+  visibility: visible;
 }
 
 .image p {
