--- a/static/styles.scss
+++ b/static/styles.scss
@@ -732,7 +732,7 @@ footer {
 .image:after.active {
   opacity: 1;
 }
-.image:hover:after {
+.image:hover:after, .image.touch-hover {
   opacity: 1;
   display: block;
 }
@@ -1360,6 +1360,20 @@ figcaption {
   height: auto;
   text-align: justify;
 }
+
+.aboutText {
+  font-size: 20px; 
+  margin-right: 8.3%; 
+  margin-left: 8.3%;
+  height: auto;
+  text-align: justify;
+  
+}
+
+.new {
+  justify-content: space-between;
+}
+
 
 @media screen and (max-width: 756px) {
 
