--- a/static/styles.scss
+++ b/static/styles.scss
@@ -717,7 +717,7 @@ footer {
   width: 100%;
   object-fit: cover;
 }
-.image:after {
+.image:after, .image.touch-hover {
   content: '';
   position: absolute;
   width: 100%; 
@@ -729,7 +729,7 @@ footer {
   transition: opacity 0.5s ease;
 }
 
-.image:after.active {
+.image:after.active, .image.touch-hover {
   opacity: 1;
 }
 .image:hover:after, .image.touch-hover {
@@ -753,7 +753,7 @@ footer {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
-.image:hover p {
+.image:hover p, .image.touch-hover p {
   opacity: 1;
   display: block;
 }
@@ -775,7 +775,7 @@ footer {
 
 }
 
-.image:hover hr {
+.image:hover hr, .image.touch-hover {
   opacity: 1;
 }
 
